--- a/pages/Room_details/src/details.scss
+++ b/pages/Room_details/src/details.scss
@@ -10,6 +10,9 @@
 //header
 @import '../../../common/header.scss';
 
+//benefits
+@import '../../../common/benefits-mixin.scss';
+
 //calculator
 @import '../../../cards/src/includes/calc-price.scss';
 
