--- a/form_elements/src/includes/comment.pug
+++ b/form_elements/src/includes/comment.pug
@@ -1,13 +1,5 @@
-include ../../../common/buttons-mixins.pug
-.comment
-    .comment__head
-        img(src="./img/image.png", alt="").comment__photo
-        .comment__text
-            .comment__name Мурад Сарафанов
-            .comment__date 5 дней назад
-    .comment__main
-        .comment__like
-            +like-button(12, "active")
-        .comment__text Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.
+include ../../../common/comments
+
++comment("./img/image.png", "Мурад Сарафанов", "5 дней назад", "12", "active", "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.")
 
 script(src="./js/like-button.js")
