comments added to room details page

--- a/pages/Room_details/src/details.scss
+++ b/pages/Room_details/src/details.scss
@@ -13,6 +13,9 @@
 //benefits
 @import '../../../common/benefits-mixin.scss';
 
+//comments
+@import '../../../form_elements/src/includes/comment.scss';
+
 //calculator
 @import '../../../cards/src/includes/calc-price.scss';
 
