--- a/pages/Room_details/src/details.pug
+++ b/pages/Room_details/src/details.pug
@@ -29,6 +29,10 @@ html(lang="en")
                             +benefit("./img/fireplace.svg", "cosy", "Уют", "Номер оснащён камином")
                         .room-details__feedback
                     .room-details__comments
+                        include ../../../common/comments
+                        +comment("./img/image.png", "Мурад Сарафанов", "5 дней назад", "12", "active", "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.")
+                        +comment("./img/image-4.png", "Патрисия Стёклышкова", "Неделю назад", "2", "inactive", "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент")
+                        script(src="./js/like-button.js")
                     .room-details__rules
                 .room-details__calculator
                     include ../../../cards/src/includes/calc-price
