bullet list realisation with mixin

--- a/form_elements/src/index.pug
+++ b/form_elements/src/index.pug
@@ -18,6 +18,7 @@ html(lang="ru")
             include includes/rich-checkbox-buttons
             +rich-checkbox('rich checkbox buttons')
             include includes/bullet-list
+            +bullet("bullet list")
             include includes/benefits
             include includes/comment
         script(src="js/dropdown.js")
