--- a/form_elements/src/includes/bullet-list.pug
+++ b/form_elements/src/includes/bullet-list.pug
@@ -1,6 +1,8 @@
 mixin bullet(title)
     .bullet
-        .bullet__title= title
+        - if (title) {
+            .bullet__title= title
+        - }
         ul.bullet__list 
             li.bullet__item Нельзя с питомцами
             li.bullet__item Без вечеринок и мероприятий
