--- a/common/rooms-mixin.scss
+++ b/common/rooms-mixin.scss
@@ -4,12 +4,21 @@
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
     border-radius: 4px;
     position: relative;
-    &__arrows {
+    &__before {
         position: absolute;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
+        width: 40px;
         top: 21%;
+    }
+    &__after {
+        position: absolute;
+        width: 40px;
+        top: 21%;
+        right: 1%;
+    }
+    &__link {
+        &:hover .room-card__img{
+            box-shadow: 0px 0px 20px rgba(31, 32, 65, 0.5);
+        }
     }
     &__before a {
         background: url('../src/img/side_arrow.svg');
