--- a/pages/Search_room/src/search.pug
+++ b/pages/Search_room/src/search.pug
@@ -74,20 +74,20 @@ html(lang="en")
                     .rooms__title Номера, которые мы для вас подобрали
                     .rooms__options
                         .rooms__column
-                            +room("../src/img/888.png", "888", "9 990", "5", "145", "" , "люкс")
-                            +room("../src/img/856.png", "856", "7 300", "5", "19", "hidden")
-                            +room("../src/img/678.png", "678", "5 500", "5", "45", "hidden")
-                            +room("../src/img/666.png", "666", "5 000", "5", "25", "hidden")
+                            +room("../src/img/888.png", "888", "9 990", "5", "145", "" , "люкс", "##")
+                            +room("../src/img/856.png", "856", "7 300", "5", "19", "hidden", "", "#")
+                            +room("../src/img/678.png", "678", "5 500", "5", "45", "hidden", "", "#")
+                            +room("../src/img/666.png", "666", "5 000", "5", "25", "hidden", "", "#")
                         .rooms__column
-                            +room("../src/img/840.png", "840", "9 990", "4", "65", "hidden")
-                            +room("../src/img/740.png", "740", "6 000", "4", "44", "hidden")
-                            +room("../src/img/450.png", "450", "5 300", "4", "39", "hidden")
-                            +room("../src/img/444.png", "444", "5 000", "3", "39", "hidden")
+                            +room("../src/img/840.png", "840", "9 990", "4", "65", "hidden", "", "#")
+                            +room("../src/img/740.png", "740", "6 000", "4", "44", "hidden", "", "#")
+                            +room("../src/img/450.png", "450", "5 300", "4", "39", "hidden", "", "#")
+                            +room("../src/img/444.png", "444", "5 000", "3", "39", "hidden", "", "#")
                         .rooms__column
-                            +room("../src/img/980.png", "980", "8 500", "3", "35", "hidden", "люкс")
-                            +room("../src/img/982.png", "982", "5 800", "3", "56", "hidden")
-                            +room("../src/img/350.png", "350", "5 000", "3", "77", "hidden")
-                            +room("../src/img/352.png", "352", "5 000", "3", "55", "hidden")
+                            +room("../src/img/980.png", "980", "8 500", "3", "35", "hidden", "люкс", "#")
+                            +room("../src/img/982.png", "982", "5 800", "3", "56", "hidden", "", "#")
+                            +room("../src/img/350.png", "350", "5 000", "3", "77", "hidden", "", "#")
+                            +room("../src/img/352.png", "352", "5 000", "3", "55", "hidden", "", "#")
                     .rooms__pagination.pagination
                         .pagination__buttons
                             a(href="#").pagination__option_selected 1
