--- a/cards/src/includes/registration.scss
+++ b/cards/src/includes/registration.scss
@@ -2,6 +2,7 @@
 @import '../../../form_elements/src/includes/small-buttons/toggle.scss';
 
 .registration-card {
+    background-color: #FFF;
     max-width: 380px;
     padding: 40px 30px 30px 30px;
     border: 1px solid rgba(0, 0, 0, 0.12);
