--- a/cards/src/includes/sign-in.scss
+++ b/cards/src/includes/sign-in.scss
@@ -4,6 +4,7 @@
     border: 1px solid rgba(0, 0, 0, 0.12);
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    background-color: #FFF;
     &__title {
         @include h1-text;
         margin-bottom: 20px;
