--- a/cards/src/includes/sign-in.scss
+++ b/cards/src/includes/sign-in.scss
@@ -16,6 +16,9 @@
         justify-content: space-between;
         margin-bottom: 22px;
     }
+    &__button {
+        position: relative;
+    }
     &__entrance {
         @include purple-button;
         @include purple-button-arrow;
