landing page adaptive

--- a/common/footer.pug
+++ b/common/footer.pug
@@ -1,6 +1,10 @@
-.widget
-    .widget__content
-        include ../headers_footers/src/includes/footers/widget
-.copybar
-    .copybar__content
-        include ../headers_footers/src/includes/footers/copybar
+.footer-standard
+    .widget
+        .widget__content
+            include ../headers_footers/src/includes/footers/widget
+    .bar
+        .bar__content
+            include ../headers_footers/src/includes/footers/copybar
+.footer-creative
+    .footer-creative__content
+        include ../headers_footers/src/includes/footers/creative
