--- a/common/header.pug
+++ b/common/header.pug
@@ -17,3 +17,5 @@ include ./header-navigation-mixins
                 a(href="#").header__sign-in войти
             .header__item
                 a(href="#").header__registration зарегистрироваться
+        .header__burger-menu
+            span
