--- a/cards/src/includes/search-form.scss
+++ b/cards/src/includes/search-form.scss
@@ -12,13 +12,22 @@
 }
 
 .search-form {
-    max-width: 380px;
-    padding: 40px 30px 30px 30px;
-
+    width: 380px;
+    padding: 40px 0 30px;
     border: 1px solid rgba(0, 0, 0, 0.12);
     border-radius: 4px;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
-
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+    @media (max-width: 380px) {
+        width: 300px;
+    }
+    &__content {
+        border-radius: 4px;
+        width: 320px;
+        margin: 0 auto;
+        @media (max-width: 380px) {
+            width: 280px;
+        }
+    }
     
     &__title {
         @include h1-text;
@@ -27,16 +36,11 @@
     }
     &__dates {
         display: flex;
-        width: 320px;
         justify-content: space-between;
         margin-bottom: 21px;
     }
     &__guests {
-        width: 320px;
         margin-bottom: 31px;
-    }
-    &__button {
-        width: 320px;
     }
     &__link {
         position: relative;
