--- a/headers_footers/src/includes/footers/creative.scss
+++ b/headers_footers/src/includes/footers/creative.scss
@@ -14,3 +14,16 @@
         justify-content: space-between;
     }
 }
+.footer-creative{
+    max-width: 768px;
+    height: 367px;
+    margin: auto;
+
+    background: #FFFFFF;
+    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+    border: 1px solid transparent;
+    &__content {
+        max-width: 560px;
+        margin: 117px auto 0;
+    }
+}
