--- a/headers_footers/src/includes/headers/navigation.scss
+++ b/headers_footers/src/includes/headers/navigation.scss
@@ -1,8 +1,8 @@
-.navigation { 
+.navigation {
     &__list {
         display: flex;
         justify-content: space-between;
-        width: 100%;
+        width: 445px;
 
         @include body-text;
         color: $dark-shade-50-color;
