--- a/headers_footers/src/main.scss
+++ b/headers_footers/src/main.scss
@@ -111,17 +111,16 @@
     }
 }
 
-.footer-creative{
-	max-width: 768px;
-	height: 367px;
-	margin: auto;
-
-	background: #FFFFFF;
-	box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
-	border: 1px solid transparent;
-	&__content {
-		max-width: 560px;
-		margin: auto;
-		margin-top: 117px;
-	}
-}
+//.footer-creative{
+//	max-width: 768px;
+//	height: 367px;
+//	margin: auto;
+//
+//	background: #FFFFFF;
+//	box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+//	border: 1px solid transparent;
+//	&__content {
+//		max-width: 560px;
+//		margin: 117px auto 0;
+//	}
+//}
