--- a/pages/Landing_page/src/main.scss
+++ b/pages/Landing_page/src/main.scss
@@ -15,7 +15,9 @@
 @import '../../../cards/src/includes/datepicker-calendar.scss';
 
 //footer
-@import '../../../common/footer.scss';
+@import '../../headers_footers/src/includes/footers/copybar';
+@import '../../headers_footers/src/includes/footers/creative';
+@import '../../headers_footers/src/includes/footers/widget';
 
 //fonts
 @font-face {
@@ -68,44 +70,66 @@
 
 .landing-page {
 	max-width: 1440px;
-	height: 891px;
-	background: url('../src/img/background-photo.png');
-	background-repeat: no-repeat;
+	margin: 0 auto;
+	height: 900px;
+	background: url('../src/img/background-photo.png') no-repeat top;
 	&__content {
 		max-width: 1168px;
 		margin: 70px auto 18px;
-		height: 740px; 
+		height: 740px;
 		display: flex;
 		justify-content: space-between;
+		@media (max-width: 540px) {
+			flex-direction: column;
+		}
 	}
 	&__datepicker {
 		align-self: flex-start;
 		background-color: #FFFFFF;
+		border-radius: 4px;
+		@media (max-width: 540px) {
+			align-self: center;
+		}
 	}
 	&__description {
 		align-self: flex-end;
 		text-align: right;
 		max-width: 280px;
 		@include body-text;
+		@media (max-width: 540px) {
+			align-self: center;
+		}
 	}
 }
-.footer {
-	max-width: 1440px;
-	&__widget {
-		height: 372px;
-		margin: 0 auto;
-		padding: 108px 140px;
-		background: #FFFFFF;
-		box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.1);
-	}
-	&__copybar {
+.widget {
+	height: 372px;
+	margin: 0 auto;
+	padding: 108px 140px;
+	background: #FFFFFF;
+	box-shadow: 0 1px 0 rgba(31, 32, 65, 0.1);
+}
+.bar {
+	width: 100%;
+	height: 70px;
+	margin: 0 auto;
+	padding: 0 140px;
+	background: #FFFFFF;
+	box-shadow: 0 1px 0 rgba(31, 32, 65, 0.05);
+	&__content {
 		height: 70px;
-		margin: 1px auto;
-		padding: 0 140px;
-		background: #FFFFFF;
-		box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.05);
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+	}
+}
+.footer-standard {
+	@media (max-width: 768px) {
+		display: none;
+	}
+}
+.footer-creative {
+	display: none;
+	@media (max-width: 768px) {
+		display: block;
 	}
 }
