--- a/newBuild/src/pages/colors-type/colors-type.pug
+++ b/newBuild/src/pages/colors-type/colors-type.pug
@@ -3,8 +3,10 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Colors type
+        title Colors Type
     body
-        .colors-type colors type
-            .palette palette
-            .fonts fonts
+        .logo
+        .colors-type
+            .colors-type__content
+                include ../../components/palette/palette
+                include ../../components/text-type/text-type
