--- a/newBuild/src/pages/colors-type/colors-type.scss
+++ b/newBuild/src/pages/colors-type/colors-type.scss
@@ -1,10 +1,35 @@
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../../fonts/Montserrat/Montserrat-Regular.eot');
+  src: local('☺'), url('../../fonts/Montserrat/Montserrat-Regular.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Regular.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../../fonts/Montserrat/Montserrat-Bold.eot');
+  src: local('☺'), url('../../fonts/Montserrat/Montserrat-Bold.woff') format('woff'), url('../../fonts/Montserrat/Montserrat-Bold.ttf') format('truetype'), url('../../fonts/Montserrat/Montserrat-Bold.svg') format('svg');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@import "../../components/palette/palette";
+@import "../../components/text-type/text-type";
+
+
 .colors-type {
-  border: 1px solid black;
+  max-width: 1440px;
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1147px;
+    margin: 65px 140px 0;
+  }
 }
-.palette {
-  color: green;
-  text-transform: uppercase;
-}
-.fonts {
-  font-style: italic;
+.logo {
+  background: url("../../images/logo-bw.svg") no-repeat;
+  margin: 20px;
+  width: 50px;
+  height: 50px;
 }
