class names changed

--- a/newBuild/src/components/palette/palette.pug
+++ b/newBuild/src/components/palette/palette.pug
@@ -1,29 +1,29 @@
-.colors
-    .colors__data
-        .colors__box.colors__box_dark100
-        .colors__text Dark Shade 100%
-            .colors__number #1F2041
-    .colors__data
-        .colors__box.colors__box_dark75
-        .colors__text Dark Shade 75%
-            .colors__number #1F2041
-    .colors__data
-        .colors__box.colors__box_dark50
-        .colors__text Dark Shade 50%
-            .colors__number #1F2041
-    .colors__data
-        .colors__box.colors__box_dark25
-        .colors__text Dark Shade 25%
-            .colors__number #1F2041
-    .colors__data
-        .colors__box.colors__box_dark5
-        .colors__text Dark Shade 5%
-            .colors__number #1F2041
-    .colors__data
-        .colors__box.colors__box_purple
-        .colors__text Purple
-            .colors__number #BC9CFF
-    .colors__data
-        .colors__box.colors__box_green
-        .colors__text Green
-            .colors__number #6FCF97
+.palette
+    .palette__data
+        .palette__box.palette__box_dark100
+        .palette__text Dark Shade 100%
+            .palette__number #1F2041
+    .palette__data
+        .palette__box.palette__box_dark75
+        .palette__text Dark Shade 75%
+            .palette__number #1F2041
+    .palette__data
+        .palette__box.palette__box_dark50
+        .palette__text Dark Shade 50%
+            .palette__number #1F2041
+    .palette__data
+        .palette__box.palette__box_dark25
+        .palette__text Dark Shade 25%
+            .palette__number #1F2041
+    .palette__data
+        .palette__box.palette__box_dark5
+        .palette__text Dark Shade 5%
+            .palette__number #1F2041
+    .palette__data
+        .palette__box.palette__box_purple
+        .palette__text Purple
+            .palette__number #BC9CFF
+    .palette__data
+        .palette__box.palette__box_green
+        .palette__text Green
+            .palette__number #6FCF97
