--- a/newBuild/src/components/text-type/text-type.pug
+++ b/newBuild/src/components/text-type/text-type.pug
@@ -1,17 +1,17 @@
-.type
-    .type__data#h1
-        .type__name H1
-        .type__example
+.font
+    .font__block.font__block_h1
+        .font__name H1
+        .font__example
             | This one is the sub-section or <br>
             | widget title
-    .type__data#h2
-        .type__name H2
-        .type__example Next one is the item title inside widgets
-    .type__data#h3
-        .type__name H3
-        .type__example This is a label or CTA text
-    .type__data#body
-        .type__name Body
-        .type__example
+    .font__block.font__block_h2
+        .font__name H2
+        .font__example Next one is the item title inside widgets
+    .font__block.font__block_h3
+        .font__name H3
+        .font__example This is a label or CTA text
+    .font__block.font__block_body
+        .font__name Body
+        .font__example
             | This is the body text which is used for most <br>
             | of the design, like paragraphs, lists, etc.
