--- a/newBuild/src/components/palette/palette.scss
+++ b/newBuild/src/components/palette/palette.scss
@@ -1,12 +1,5 @@
-$dark-shade-100-color: #1F2041;
-$dark-shade-75-color: rgba(31, 32, 65, 0.75);
-$dark-shade-50-color: rgba(31, 32, 65, 0.50);
-$dark-shade-25-color: rgba(31, 32, 65, 0.25);
-$dark-shade-05-color: rgba(31, 32, 65, 0.05);
-$purple-color: #BC9CFF;
-$green-color: #6fcf97;
 
-.colors {
+.palette {
   &__data {
     margin-bottom: 20px;
     display: flex;
@@ -18,25 +11,25 @@ $green-color: #6fcf97;
     border-radius: 6px;
     margin-right: 40px;
     &_dark100 {
-      background: $dark-shade-100-color;
+      background: #1F2041;
     }
     &_dark75 {
-      background: $dark-shade-75-color;
+      background: rgba(31, 32, 65, 0.75);
     }
     &_dark50 {
-      background: $dark-shade-50-color;
+      background: rgba(31, 32, 65, 0.5);
     }
     &_dark25 {
-      background: $dark-shade-25-color;
+      background: rgba(31, 32, 65, 0.25);
     }
     &_dark5 {
-      background: $dark-shade-05-color;
+      background: rgba(31, 32, 65, 0.05);
     }
     &_purple {
-      background: $purple-color;
+      background: #BC9CFF;
     }
     &_green {
-      background: $green-color;
+      background: #6FCF97;
     }
   }
   &__text {
@@ -45,7 +38,7 @@ $green-color: #6fcf97;
       weight: 700;
       size: 19px;
     }
-    color: $dark-shade-100-color;
+    color: #1F2041;
     line-height: 29px;
 
   }
