designer header added

--- a/src/components/header-designer/header-designer.pug
+++ b/src/components/header-designer/header-designer.pug
@@ -4,3 +4,6 @@
         .header-designer__navigation
             include ../header-navigation/header-navigation
             +navigation(true, false)
+        .header-designer__designer
+            .header-designer__line
+            .header-designer__name Юлий Цезарь
