--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -15,4 +15,5 @@ html(lang="en")
                     include ../../components/header-designer/header-designer
             .footer
                 .footer__regular
+                    include ../../components/footer-regular/footer-regular
                 .footer__ipad
