--- a/src/components/footer-regular/footer-regular.pug
+++ b/src/components/footer-regular/footer-regular.pug
@@ -1,37 +1,73 @@
-include ../../components/common-inputs/common-inputs
+include ../../components/subscription-form/subscription-form
 
-mixin widget-list(name, href)
-    li.widget-footer__text
-        a(href= href)= name
-mixin widget-list-title(name)
-    li.widget-footer__title= name
+mixin footer-navigation-list(name, href)
+    li.footer-regular__text
+        a(href= href class='footer-regular__anchor')= name
+mixin footer-navigation-title(name)
+    li.footer-regular__title= name
 
-.widget-footer
-    .widget-footer__content
-        .widget-footer__information
-            .widget-footer__logo
-            .widget-footer__text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
-        nav.widget-footer__navigation
-            ul.widget-footer__list
-                +widget-list-title("Навигация")
-                +widget-list("О нас", '#')
-                +widget-list("Новости", '#')
-                +widget-list("Служба поддержки", '#')
-                +widget-list("Услуги", '#')
-            ul.widget-footer__list.widget-footer__list_shifted
-                +widget-list-title("о нас")
-                +widget-list("о сервисе", '#')
-                +widget-list("наша команда", '#')
-                +widget-list("вакансии", '#')
-                +widget-list("инвесторы", '#')
+//- mixin widget-list(name, href)
+//-     li.widget-footer__text
+//-         a(href= href)= name
+//- mixin widget-list-title(name)
+//-     li.widget-footer__title= name
 
-            ul.widget-footer__list
-                +widget-list-title("служба поддержки")
-                +widget-list("соглашения", '#')
-                +widget-list("сообщества", '#')
-                +widget-list("связь с нами", '#')
-        .widget-footer__information
-            .widget-footer__title_last Подписка
-            .widget-footer__text Получайте специальные предложения и новости сервиса
+.footer-regular
+    .footer-regular__content
+        .footer-regular__information
+            img(src="./images/logo-color.svg", alt="logo").footer-regular__logo
+            .footer-regular__text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
+        nav.footer-regular__navigation
+            ul.footer-regular__list
+                +footer-navigation-title("Навигация")
+                +footer-navigation-list("О нас", '#')
+                +footer-navigation-list("Новости", '#')
+                +footer-navigation-list("Служба поддержки", '#')
+                +footer-navigation-list("Услуги", '#')
+            ul.footer-regular__list
+                +footer-navigation-title("о нас")
+                +footer-navigation-list("О сервисе", '#')
+                +footer-navigation-list("наша команда", '#')
+                +footer-navigation-list("вакансии", '#')
+                +footer-navigation-list("инверсторы", '#')
+            ul.footer-regular__list
+                +footer-navigation-title("служба поддержки")
+                +footer-navigation-list("соглашения", '#')
+                +footer-navigation-list("сообщества", '#')
+                +footer-navigation-list("связь с нами", '#')
+        .footer-regular__subscription
+            .footer-regular__title.footer-regular__title_last Подписка
+            .footer-regular__text Получайте специальные предложения и новости сервиса
             .widget-footer__form
-                +input-email("Email")
+                +subscription-form("Email")
+
+
+//- .widget-footer
+//-     .widget-footer__content
+//-         .widget-footer__information
+//-             .widget-footer__logo
+//-             .widget-footer__text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
+//-         nav.widget-footer__navigation
+//-             ul.widget-footer__list
+//-                 +widget-list-title("Навигация")
+//-                 +widget-list("О нас", '#')
+//-                 +widget-list("Новости", '#')
+//-                 +widget-list("Служба поддержки", '#')
+//-                 +widget-list("Услуги", '#')
+//-             ul.widget-footer__list.widget-footer__list_shifted
+//-                 +widget-list-title("о нас")
+//-                 +widget-list("о сервисе", '#')
+//-                 +widget-list("наша команда", '#')
+//-                 +widget-list("вакансии", '#')
+//-                 +widget-list("инвесторы", '#')
+
+//-             ul.widget-footer__list
+//-                 +widget-list-title("служба поддержки")
+//-                 +widget-list("соглашения", '#')
+//-                 +widget-list("сообщества", '#')
+//-                 +widget-list("связь с нами", '#')
+//-         .widget-footer__information
+//-             .widget-footer__title_last Подписка
+//-             .widget-footer__text Получайте специальные предложения и новости сервиса
+//-             .widget-footer__form
+//-                 +subscription-form("Email")
