quote marks changed

--- a/src/components/footer-regular/footer-regular.scss
+++ b/src/components/footer-regular/footer-regular.scss
@@ -1,4 +1,5 @@
 @import '../subscription-form/subscription-form.scss';
+@import '../footer-bar/footer-bar.scss';
 
 .footer-regular {
     max-width: 1440px;
