--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Headers & footers
-        script(src='./main.js')
+        script(src="./main.js")
     body.headers-footers
             .headers-footers__logo
                 img(src="./images/logo-bw.svg")
