--- a/src/components/footer-ipad/footer-ipad.pug
+++ b/src/components/footer-ipad/footer-ipad.pug
@@ -1,11 +1,12 @@
-.creative-footer
-    .creative-footer__logo
-        img(src="img/logo.svg", alt="")
-    .creative-footer__text Copyright © 2018 Toxin отель. Все права зачищены.
-    .creative-footer__socials
-        a(href="#")
-            img(src="img/twitter.png", alt="twitter")
-        a(href="#")
-            img(src="img/facebook.png", alt="facebook")
-        a(href="#")
-            img(src="img/inst.png", alt="instagram")
+.footer-ipad
+    .footer-ipad__content
+        .footer-ipad__logo
+            img(src="images/logo-color.svg", alt="")
+        .footer-ipad__text Copyright © 2018 Toxin отель. Все права зачищены.
+        .footer-ipad__social
+            a(href="#")
+                img(src="images/twitter.png", alt="twitter")
+            a(href="#")
+                img(src="images/facebook.png", alt="facebook")
+            a(href="#")
+                img(src="images/inst.png", alt="instagram")
