--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -17,3 +17,4 @@ html(lang="en")
                 .footer__regular
                     include ../../components/footer-regular/footer-regular
                 .footer__ipad
+                    include ../../components/footer-ipad/footer-ipad
