--- a/src/components/footer-ipad/footer-ipad.scss
+++ b/src/components/footer-ipad/footer-ipad.scss
@@ -1,35 +1,27 @@
-.creative-footer {
-  text-align: center;
-  &__text {
-    margin-top: 15.5px;
-    margin-bottom: 21px;
-    font: {
-      family: Montserrat;
-      weight: normal;
-      size: 14px;
-    }
-    color: rgba(31, 32, 65, 0.75);
-    line-height: 24px;
-    text-align: center;
-  }
-  &__socials{
-    margin: auto;
-    max-width: 112px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-}
-.footer-creative{
+.footer-ipad {
   max-width: 768px;
   height: 367px;
   margin: auto;
-
   background: #FFFFFF;
   box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
-  border: 1px solid transparent;
+  box-sizing: border-box;
+  padding-top: 118px;
   &__content {
-    max-width: 560px;
-    margin: 117px auto 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 129px;
+  }
+  &__text {
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    margin-bottom: 10px;
+    color: rgba(31, 32, 65, 0.75);
+  }
+  &__social{
+    width: 112px;
+    display: flex;
+    justify-content: space-between;
   }
 }
