airdatepicker plugin added

--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Cards
     body
-        .cards cards
-            .cards__item cards item pug
-            .cards__item cards item pug 2
+        .cards
+            .cards__calendar
+                include ../../components/calendar/calendar
                 
