submit button added

--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -6,6 +6,8 @@ html(lang="en")
         title Cards
     body
         .cards
+            .cards__search-room
+                include ../../components/search-room/search-room
             .cards__calendar
                 include ../../components/calendar/calendar
                 
