--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -1,4 +1,5 @@
 @import '../../components/calendar/calendar.scss';
+@import '../../components/search-room/search-room.scss';
 @font-face {
     font-family: 'Montserrat';
     src: url('../../fonts/Montserrat/Montserrat-Regular.eot');
