--- a/src/components/search-room/search-room.scss
+++ b/src/components/search-room/search-room.scss
@@ -1,1 +1,2 @@
-@import '../../components/submit-button/submit-button.scss'
+@import '../../components/submit-button/submit-button.scss';
+@import '../../components/dropdown/dropdown.scss';
