dropdown styles added

--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -6,22 +6,22 @@
         .guest__row
             .guest__name Взрослые
             .guest__counter.js-counter
-                button(data-direction="minus").guest__sign.js-counter__minus
+                button(data-direction="minus").guest__sign.js-counter__minus -
                 input(type="text" value="0").guest__number.js-counter__adults
-                button(data-direction="plus").guest__sign.js-counter__plus
+                button(data-direction="plus").guest__sign.js-counter__plus +
         .guest__row
             .guest__name Дети
             .guest__counter.js-counter
-                button(data-direction="minus").guest__sign.js-counter__minus
+                button(data-direction="minus").guest__sign.js-counter__minus -
                 input(type="text" value="0").guest__number.js-counter__children
-                button(data-direction="plus").guest__sign.js-counter__plus
+                button(data-direction="plus").guest__sign.js-counter__plus +
         .guest__row
             .guest__name Младенцы
             .guest__counter.js-counter
-                button(data-direction="minus").guest__sign.js-counter__minus
+                button(data-direction="minus").guest__sign.js-counter__minus -
                 input(type="text" value="0").guest__number.js-counter__infants
-                button(data-direction="plus").guest__sign.js-counter__plus
-        .guest__buttons
-            .guest__clear.js-clear-button Очистить
-            .gues__submit.js-submit-button Применить
+                button(data-direction="plus").guest__sign.js-counter__plus +
+        .guest__event
+            .guest__button.js-clear-button Очистить
+            .guest__button.js-submit-button Применить
             
