--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -25,7 +25,6 @@
         cursor: pointer;
     }
     &__dropdown {
-        display: none;
         box-sizing: border-box;
         padding: 7px 8px 0 11px;
         position: absolute;
@@ -86,10 +85,19 @@
         }
     }
 }
-.js-guest_open {
-    display: block;
-}
+
 .js-guest_expand {
     border: 1px solid rgba(31, 32, 65, 0.5);
     border-radius: 4px 4px 0 0;
+}
+.js-guest__button_visible {
+    display: block;
+    cursor: pointer;
+}
+.js-guest__button_hidden {
+    opacity: 0;
+    cursor: default;
+}
+.js-guest__dropdown_hidden {
+    display: none;
 }
