--- a/src/components/search-room/search-room.scss
+++ b/src/components/search-room/search-room.scss
@@ -1,4 +1,5 @@
 @import '../../components/date/date.scss';
+@import '../../components/calendar/calendar.scss';
 @import '../../components/dropdown/dropdown.scss';
 @import '../../components/submit-button/submit-button.scss';
 
@@ -9,6 +10,7 @@
     border: 1px solid rgba(0, 0, 0, 0.12);
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    background: #ffffff;
     &__content {
         max-width: 320px;
         min-width: 300px;
