--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -11,6 +11,7 @@ html(lang="en")
             .header
                 .header__regular
                     include ../../components/header-regular/header-regular
+                    +header(true)
                 .header__designer
                     include ../../components/header-designer/header-designer
             .footer
