--- a/src/pages/landing-page/landing-page.pug
+++ b/src/pages/landing-page/landing-page.pug
@@ -7,6 +7,7 @@ html(lang="en")
     body.landing
         .landing__header
             include ../../components/header-regular/header-regular
+            +header(false)
         .landing__content
             .landing__info
                 .landing__search
