--- a/src/components/search-room/search-room.pug
+++ b/src/components/search-room/search-room.pug
@@ -1,7 +1,7 @@
 .search-room
     .search-room__content
         .search-room__title найдём номера под ваши пожелания
-        .search-room__period
+        .search-room__range
             .search-room__date
                 .search-room__text прибытие
                 .search-room__calendar
