--- a/src/components/search-room/search-room.scss
+++ b/src/components/search-room/search-room.scss
@@ -26,7 +26,7 @@
             text-transform: uppercase;
         }
     }
-    &__period {
+    &__range {
         display: flex;
         justify-content: space-between;
         margin-bottom: 20px;
