--- a/src/pages/landing-page/landing-page.pug
+++ b/src/pages/landing-page/landing-page.pug
@@ -13,6 +13,8 @@ html(lang="en")
                 .landing__search
                     include ../../components/search-room/search-room
                 .landing__tagline лучшие номера для вашей работы, отдыха и просто вдохновения
-        .landing__footer
+        .landing__footer.landing__footer_regular
             include ../../components/footer-regular/footer-regular
+        .landing__footer.landing__footer_ipad
+            include ../../components/footer-ipad/footer-ipad
         
