--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -1,9 +1,6 @@
 @import '~air-datepicker/dist/css/datepicker.min.css';
 
 .datepicker-calendar {
-    margin-top: -8px;
-    margin-left: 9px;
-    position: relative;
     &__submit {
         position: absolute;
         right: 20px; bottom: 20px;
@@ -35,7 +32,8 @@
         box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
         border: 1px solid rgba(31, 32, 65, 0.05);
         border-radius: 4px;
-            
+        position: absolute;
+        left: 0;
         
     }
     &--nav {
